Met le code dans un textarea et le style un peu

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -25,6 +25,11 @@ td, th {
     padding: 10px;
 }
 
+textarea {
+    width:60%;
+    height:400px;
+}
+
 .navlinks {
     display: inline-block;
     float: left;
